[tool.poetry]
name = "Monetary-Analysis"
version = "1.0.0"
description = "Calculating employee bonuses and evaluating their key performance indicators with visualization in Power BI"
authors = ["Anastasia Iva <Vatson.1604@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Anastasia-0-Iva/Monetary-Analysis.git"
repository = "https://github.com/Anastasia-0-Iva/Monetary-Analysis.git"
keywords = ["visualization", "Power BI", "csv", "data-science", "HR", "python", "dosboard"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"
requests = "^2.26.0"
matplotlib = "^3.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^22.0.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"